@@ -21,8 +21,6 @@ import java.io.IOException;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.GZIPOutputStream;
 
-import javax.xml.bind.DatatypeConverter;
-
 import com.netflix.msl.MslConstants.CompressionAlgorithm;
 import com.netflix.msl.MslError;
 import com.netflix.msl.MslException;
@@ -66,7 +64,7 @@ public class MslUtils {
                     throw new MslException(MslError.UNSUPPORTED_COMPRESSION, compressionAlgo.name());
             }
         } catch (final IOException e) {
-            final String dataB64 = DatatypeConverter.printBase64Binary(data);
+            final String dataB64 = Base64.encode(data);
             throw new MslException(MslError.COMPRESSION_ERROR, "algo " + compressionAlgo.name() + " data " + dataB64, e);
         }
     }
@@ -116,7 +114,7 @@ public class MslUtils {
                     throw new MslException(MslError.UNSUPPORTED_COMPRESSION, compressionAlgo.name());
             }
         } catch (final IOException e) {
-            final String dataB64 = DatatypeConverter.printBase64Binary(data);
+            final String dataB64 = Base64.encode(data);
             throw new MslException(MslError.UNCOMPRESSION_ERROR, "algo " + compressionAlgo.name() + " data " + dataB64, e);
         }
     }
