@@ -791,7 +791,7 @@ public class JsonWebKeyTest {
     }
 
     // This unit test no longer passes because
-    // DatatypeConverter.parseBase64Binary() does not error when given invalid
+    // Base64.decode() does not error when given invalid
     // Base64 encoded data.
     @Ignore
     @Test
@@ -821,7 +821,7 @@ public class JsonWebKeyTest {
     }
     
     // This unit test no longer passes because
-    // DatatypeConverter.parseBase64Binary() does not error when given invalid
+    // Base64.decode() does not error when given invalid
     // Base64 encoded data.
     @Ignore
     @Test
