@@ -28,7 +28,6 @@ import java.util.Date;
 import java.util.Random;
 
 import javax.crypto.SecretKey;
-import javax.xml.bind.DatatypeConverter;
 
 import org.junit.AfterClass;
 import org.junit.Before;
@@ -64,6 +63,7 @@ import com.netflix.msl.keyx.SymmetricWrappedExchange.RequestData;
 import com.netflix.msl.keyx.SymmetricWrappedExchange.ResponseData;
 import com.netflix.msl.test.ExpectedMslException;
 import com.netflix.msl.tokens.MasterToken;
+import com.netflix.msl.util.Base64;
 import com.netflix.msl.util.MockAuthenticationUtils;
 import com.netflix.msl.util.MockMslContext;
 import com.netflix.msl.util.MslContext;
@@ -479,7 +479,7 @@ public class SymmetricWrappedExchangeSuite {
             final Date expiration = new Date(System.currentTimeMillis() + 2000);
             final MasterToken masterToken = new MasterToken(ctx, renewalWindow, expiration, 1L, 1L, null, identity, encryptionKey, hmacKey);
             final MslObject mo = MslTestUtils.toMslObject(encoder, masterToken);
-            final byte[] signature = DatatypeConverter.parseBase64Binary(mo.getString("signature"));
+            final byte[] signature = Base64.decode(mo.getString("signature"));
             ++signature[1];
             mo.put("signature", signature);
             final MasterToken untrustedMasterToken = new MasterToken(ctx, mo);
